# nigf_demo

./: CMakeLists.txt  player.cpp  player.hpp  renderer.cpp  renderer.hpp  test_main.cpp
audioplayer/: audioplayer.cpp  audioplayer.hpp
custom/: background.cpp  background.hpp  dragon.cpp  dragon.hpp  player.cpp  player.hpp  sunflower.cpp  sunflower.hpp
datamanager/: animanager.cpp  animanager.hpp  audiomanager.cpp  audiomanager.hpp  gomanager.cpp  gomanager.hpp  gsmanager.cpp  gsmanager.hpp  msgmanager.cpp  msgmanager.hpp  nidm.hpp  objmanager.cpp  objmanager.hpp
framework/: animation.cpp  animation.hpp  audio.cpp  audio.hpp  gameobject.cpp  gameobject.hpp  gameplay.cpp  gameplay.hpp  gamespirite.cpp  gamespirite.hpp  image.cpp  image.hpp  keyboard.hpp  msgobject.cpp  msgobject.hpp  nigf.hpp
render/: renderer.cpp  renderer.hpp
source/: gameobject.cpp  gameobject.hpp  gameplay.cpp  gameplay.hpp  gamespirite.cpp  gamespirite.hpp  image.cpp  image.hpp
